[T3] Fix Image Alignment TTIL-List - Landing Hero

--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
@@ -1,3 +1,15 @@
+//-----------------------------------
+// Eaton TTIL-LIST - Landing Hero View
+//-----------------------------------
+.eaton-landing-hero {
+  .item {
+    img {
+      width: 100%;
+    }
+  }
+}
+
+// Bootstrap Carousel
 .carousel-component {
 
   &-slide {
@@ -70,7 +82,7 @@
 }
 
 // ******** landing hero styles **********
-.landing-hero-single {
+.eaton-landing-hero--single {
 
   .carousel-component-slide {
 
@@ -96,10 +108,12 @@
       font-size: 20px;
     }
   }
-}
 
-@include media-mobile-and-tablet {
-  .landing-hero-single {
+
+  //-----------------------------------
+  // Desktop & Desktop Large
+  //-----------------------------------
+  @include media-mobile-and-tablet {
 
     .carousel-component-slide {
 
@@ -115,5 +129,6 @@
         font-size: 14px;
       }
     }
+
   }
 }
