--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -2,6 +2,8 @@
 
 @media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }
 
+.eaton-landing-hero .item img { width: 100%; }
+
 .carousel-component-slide:hover > .carousel-component__arrow { display: block; border: 0; background-image: none; }
 
 .carousel-component-slide__caption { top: 10%; }
@@ -23,17 +25,17 @@
 @media screen and (max-width: 991px) { .carousel-component-slide__caption { top: 0; }
   .carousel-indicators { bottom: 56px; } }
 
-.landing-hero-single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
+.eaton-landing-hero--single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
 
-.landing-hero-single .carousel-component-slide__separator { width: 5%; height: 2px; background: #FFF; margin: 20px auto; }
+.eaton-landing-hero--single .carousel-component-slide__separator { width: 5%; height: 2px; background: #FFF; margin: 20px auto; }
 
-.landing-hero-single .carousel-component-slide h2 { font-size: 53px; }
+.eaton-landing-hero--single .carousel-component-slide h2 { font-size: 53px; }
 
-.landing-hero-single .carousel-component-slide__text { font-size: 20px; }
+.eaton-landing-hero--single .carousel-component-slide__text { font-size: 20px; }
 
-@media screen and (max-width: 991px) { .landing-hero-single .carousel-component-slide h2 { font-size: 35px; }
-  .landing-hero-single .carousel-component-slide__separator { display: none; }
-  .landing-hero-single .carousel-component-slide__text { font-size: 14px; } }
+@media screen and (max-width: 991px) { .eaton-landing-hero--single .carousel-component-slide h2 { font-size: 35px; }
+  .eaton-landing-hero--single .carousel-component-slide__separator { display: none; }
+  .eaton-landing-hero--single .carousel-component-slide__text { font-size: 14px; } }
 
 .featured-story-component__content { padding: 60px 40px; }
 
